--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/react-helmet": "^5.0.15",
+    "@types/react-sidebar": "^3.0.0",
     "gatsby": "^2.20.25",
     "gatsby-custom-md": "^1.0.2",
     "gatsby-image": "^2.2.3",
