--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/react-helmet": "^5.0.15",
     "@types/react-sidebar": "^3.0.0",
+    "@types/styled-components": "^5.1.0",
     "gatsby": "^2.20.25",
     "gatsby-custom-md": "^1.0.2",
     "gatsby-image": "^2.2.3",
@@ -36,6 +37,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-sidebar": "^3.0.2",
+    "styled-components": "^5.1.0",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   },
