--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "develop": "GATSBY_HOT_LOADER=fast-refresh gatsby develop",
-    "deploy": "gatsby build && gh-pages -d public -b master",
+    "deploy": "gatsby clean && gatsby build && gh-pages -d public -b master",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
